--- a/dividend-champions-gap-theory/Dividend_Champions_Gap_Theory.Rmd
+++ b/dividend-champions-gap-theory/Dividend_Champions_Gap_Theory.Rmd
@@ -11,11 +11,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Intro
 
-Typically, when earnings are announced for a stock, the price gaps up or down depending on if the earnings exceeded or fail expectations. While there are ways to try to attempt to predict earnings, the process can be rather involved and complicated. Most people would typically advise against trying to make such predictions.
+Typically, when earnings are announced for a stock, the price of the stock gaps up or down depending on if the earnings exceeds or fails expectations. While there are ways to try to attempt to predict earnings, the process can be rather involved and complicated. Most people would typically advise against trying to make such predictions.
 
-However, an idea came to me when I saw the price of a stock gap after a dividend increase: "Could you potentially trade stocks that consistently increase their dividends when they increase?". With that in mind, I narrowed down my criteria and came up with the following goal:
+However, an idea came to me when I saw the price of a stock gap after a dividend increase: "Could you trade stocks that consistently price gap when their dividend increases?". With that in mind, I narrowed down my criteria and came up with the following goal:
 
-##### **“Do Dividend Champions consistently price gap once their annual dividend increase is announced?”**
+##### **“Do Dividend Champions consistently price gap once their dividend increase is announced?”**
 
 For those that don't know, a Dividend Champion (DC) is a stock that has consistently increased its dividend for 25 years or more. This increase typically happens annually but there are some further considerations and nuances to that metric. However, I won't be describing those here. The important thing to know is that, based on the other considerations, the stocks used in this study may have: 
 
@@ -24,8 +24,6 @@ For those that don't know, a Dividend Champion (DC) is a stock that has consiste
 
 If you want to know more about DCs, you can read about them in the article, ["What is a Dividend Champion?"](https://www.dripinvesting.org/what-is-a-dividend-champion/)
 
-While 25 years is the baseline to be considered a DC, the average number of years for stocks on the DC list is much greater than that. As of the time of writing this report, the average number of a years a DC has increased its dividend is 41.44 years. If combined with price gaps, this consistency could give traders the potential to safely predict price movements when a dividend increase occurs.
-
 # Guidelines / Limitations
 
 Before we move on, there are some guidelines and limitations to establish. The following shaped the creation of this project:
@@ -33,19 +31,45 @@ Before we move on, there are some guidelines and limitations to establish. The f
 * The **[Dividend Champions List](https://docs.google.com/spreadsheets/d/1D4H2OoHOFVPmCoyKBVCjxIl0Bt3RLYSz/edit?gid=923412609#gid=923412609)** created by **[DRIP Investing](https://www.dripinvesting.org/dividend-champions/)** will be used to determine which stocks are considered DCs.
 * The past 5 dividend increases will be observed for each stock moving backwards from 2024-12-31.
 * The day before, during, and after a dividend increase will be observed for any notable price changes.
+* We are looking for stocks that, for every dividend increase, you could buy the stock when the market opens the day before its increase and then sell it the day during or after the increase. To determine this, we'll look at the price percentage increase for the following selling time periods:
+  * During High
+  * During Close
+  * After High
+  * After Close
 * The 'quantmod' package will be used to obtain financial data from Yahoo Finance. The following stock symbols were unable to be pulled using quantmod and, therefore, were removed from the list:
   * ARTN.A
   * BF.A
   * BF.B
   * MKC.V
   * RBCA.A
-* News and other economic data were not factored into these observations. This study strictly looked at dividend and price data pulled from Yahoo Finance.
+* News and other economic data was not factored into these observations. This study strictly looked at dividend and price data pulled from Yahoo Finance.
 
-# Gathering and Prepping Data
+# Determining Price Increases and Decreases
 
-The specific trading strategy that we're testing is if we could buy the stock on the day before the dividend increase and sell it either on the increase day or the day after the increase. Therefore, we will be looking at the following price comparisons:
-* Before Open to During Close
-* Before Open to After Close
-* Before Open to During High
-* Before Open to After High
+First, we determined if prices generally increase or decrease around dividend increases. Starting with the During High, you can see that more stocks actual decrease in price than increase. 
+
+**SHOW DURING HIGH PERCENTS RANGE CHART**
+
+This trend continues for the During Close, After High, and After Close.
+
+**SHOW THE OTHER PERCENT RANGE CHARTS**
+
+# Finding Consistent Price Increases
+
+Secondly, we only want stocks that consistently have a price increase in any sell time period for each dividend increase. This narrowed us down from 132 stocks to 24 stocks.
+
+**SHOW PIE CHART**
+
+Of these 24 stocks, we then looked to see which selling time period's prices increased the most frequently on average. This resulted in finding out that increases occur the most on the During High and After High time periods; both of which averaged over 4 out of 5 dividend increases showing a price increase in these time periods.
+
+**SHOW AVERAGE AMOUNT OF INCREASES PER TIMEFRAME**
+
+We then found that average price increase for all selling time periods were all around a 2%-2.5% increase.
+
+**SHOW AVERAGE PERCENT INCREASE**
+
+However, even if the increases are consistent, they need to be sizable enough to be able to make a profit from trading. If a stock has a consistent price increase of only 0.01% every dividend increase, that doesn't give a trader an opportunity to make money. So, that brings us to our final point.
+
+# Finding the Highest Consistent Price Increases
+
 
